syntax = "proto3";

import "google/type/date.proto";

package notification.event;
option java_multiple_files = true;

message Appointment {
    string staff_email = 1;
    string staff_name = 2;

    string customer_email = 3;
    string customer_name = 4;

    string customer_staus = 5;
    string staff_status = 6;

    google.type.Date date = 7;
    string start_time = 8;
    string end_time = 9;
    string note = 10;

    string tenant_id = 11;
    string event_type = 12;
}

