syntax = "proto3";

package tenant;
option java_multiple_files = true;

service TenantService {
    rpc GetTenantById(TenantIdRequest) returns (Tenant);
}

message TenantIdRequest {
    string tenant_id = 1;
}

message Tenant {
    string tenant_id = 1;
    string company_name = 2;
    string logo_url = 3;
    string primary_color = 4;

    NotificationPreferences notification_preferences = 5;
    string domain = 6;
    ContactInfo contact_info = 7;
    map<string, string> custom_config = 8;
}

message NotificationPreferences {
    string sender_email = 1;
    map<string, string> templates = 2;
}

message ContactInfo {
    string email = 1;
    string phone = 2;
    string address = 3;
}


